Fixed openapi.yaml and re generated stubs
